deploy_tmp/stock/nohup.out
  File "/home/batteryz1999/stocks/stock/telegram_notifier.py", line 127
    all_tickers = list(TARGET_STOCKS["KOSPI"].keys()) + TARGET_STOCKS["KOSDAQ"].keys()) + list(TARGET_STOCKS["NASDAQ"].keys())
                                                                                      ^
SyntaxError: unmatched ')'
  File "/home/batteryz1999/stocks/stock/telegram_notifier.py", line 127
    all_tickers = list(TARGET_STOCKS["KOSPI"].keys()) + TARGET_STOCKS["KOSDAQ"].keys()) + list(TARGET_STOCKS["NASDAQ"].keys())
                                                                                      ^
SyntaxError: unmatched ')'
HTTP Error 404: {"quoteSummary":{"result":null,"error":{"code":"Not Found","description":"Quote not found for symbol: 010620.KS"}}}
$010620.KS: possibly delisted; no price data found  (period=100d) (Yahoo error = "No data found, symbol may be delisted")

1 Failed download:
['010620.KS']: possibly delisted; no price data found  (period=100d) (Yahoo error = "No data found, symbol may be delisted")
$030190.KQ: possibly delisted; no price data found  (period=100d) (Yahoo error = "No data found, symbol may be delisted")
$066970.KQ: possibly delisted; no price data found  (period=100d) (Yahoo error = "No data found, symbol may be delisted")

2 Failed downloads:
['030190.KQ', '066970.KQ']: possibly delisted; no price data found  (period=100d) (Yahoo error = "No data found, symbol may be delisted")
